--- a/src/window.ui
+++ b/src/window.ui
@@ -10,6 +10,7 @@
       <object class="AdwToolbarView">
         <child type="top">
           <object class="AdwHeaderBar">
+	    <property name="decoration-layout">:close</property>
             <child type="end">
               <object class="GtkMenuButton">
                 <property name="primary">True</property>
