--- a/src/window.ui
+++ b/src/window.ui
@@ -11,6 +11,13 @@
         <child type="top">
           <object class="AdwHeaderBar">
 	    <property name="decoration-layout">:close</property>
+            <child type="start">
+              <object class="GtkButton" id="refresh-button">
+                <property name="icon-name">view-refresh-symbolic</property>
+                <property name="tooltip-text" translatable="yes">Refresh</property>
+		<signal name="clicked" handler="on_refresh_button_clicked" swapped="no"/>
+              </object>
+            </child>
             <child type="end">
               <object class="GtkMenuButton">
                 <property name="primary">True</property>
